fixed vertical scroll on smaller screens

--- a/src/components/main/header.component/header.scss
+++ b/src/components/main/header.component/header.scss
@@ -7,8 +7,8 @@ header {
     background-color: $main-orange;
     box-shadow: 0 0 10px 2px $main-shadow;
     position: fixed;
-    // width: 100%;
-    min-width: 100%;
+    width: 100%;
+    // min-width: 100%;
     top: 0;
     transition: 0.2s ease-in;
     z-index: 3;
