--- a/src/index.scss
+++ b/src/index.scss
@@ -26,7 +26,7 @@ body {
 
     color: $main-black;
     background-color: $main-white;
-    // overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 code {
